Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ibbc683ac8ab3e7c2489079c22fceb8ef6dd7add7

Former-commit-id: 817a494d0e1f543c2111ce3a5e6a307d0e9c0c5d

--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -147,14 +147,14 @@
     <string name="bluetooth_pref_summary" product="tablet" msgid="3506962706611366830">"به رایانه لوحی‌تان اجازه دهید با دستگاه‌های بلوتوث اطراف مرتبط شود"</string>
     <string name="bluetooth_pref_summary" product="device" msgid="2192027516577675587">"به دستگاهتان اجازه دهید با دستگاه‌های بلوتوث اطراف مرتبط شود"</string>
     <string name="bluetooth_pref_summary" product="default" msgid="768958961865499804">"به تلفنتان اجازه دهید با دستگاه‌های بلوتوث اطراف مرتبط شود"</string>
-    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"‏غیرفعال کردن انتقال داده ازطریق سخت‌افزار بلوتوث A2DP"</string>
-    <string name="bluetooth_disable_le_audio_hw_offload" msgid="4656853795514691257">"غیرفعال کردن تخلیه سخت‌افزار «صدای کم‌مصرف بلوتوث»"</string>
+    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"‏غیرفعال کردن انتقال بار سخت‌افزار بلوتوث A2DP"</string>
+    <string name="bluetooth_disable_le_audio_hw_offload" msgid="4656853795514691257">"غیرفعال کردن انتقال بار سخت‌افزار «صدای بلوتوث کم‌مصرف»"</string>
     <string name="bluetooth_disable_hw_offload_dialog_title" msgid="6001142380445276918">"دستگاه بازراه‌اندازی شود؟"</string>
     <string name="bluetooth_disable_hw_offload_dialog_message" msgid="1524373895333698779">"برای تغییر این تنظیم، باید دستگاه را بازراه‌اندازی کنید."</string>
     <string name="bluetooth_disable_hw_offload_dialog_confirm" msgid="5594859658551707592">"بازراه‌اندازی"</string>
     <string name="bluetooth_disable_hw_offload_dialog_cancel" msgid="3663690305043973720">"لغو"</string>
-    <string name="bluetooth_enable_leaudio" msgid="1245004820628723136">"فعال کردن «صدای کم‌مصرف بلوتوث»"</string>
-    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"اگر دستگاه از ویژگی‌های سخت‌افزار «صدای کم‌مصرف» پشتیبانی کند، ویژگی «صدای کم‌مصرف بلوتوث» را فعال می‌کند."</string>
+    <string name="bluetooth_enable_leaudio" msgid="1245004820628723136">"فعال کردن «صدای بلوتوث کم‌مصرف»"</string>
+    <string name="bluetooth_enable_leaudio_summary" msgid="8066117764037123479">"اگر دستگاه از ویژگی‌های سخت‌افزار «صدای کم‌مصرف» پشتیبانی کند، ویژگی «صدای بلوتوث کم‌مصرف» را فعال می‌کند."</string>
     <string name="connected_device_media_device_title" msgid="3783388247594566734">"دستگاه‌های ذخیره‌سازی"</string>
     <string name="connected_device_call_device_title" msgid="88732390601723608">"دستگاه‌های برقراری تماس"</string>
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"دستگاه‌های دیگر"</string>
@@ -1611,7 +1611,7 @@
     <string name="sd_ejecting_summary" msgid="861928572729341132">"جدا کردن در حال انجام است"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"فضای ذخیره‌سازی رو به اتمام است"</string>
     <string name="storage_low_summary" msgid="7341022293583384506">"برخی از عملکردهای سیستم مانند همگام‌سازی ممکن است به نحوه صحیح کار نکنند. با حذف یا لغو سنجاق کردن مواردی همچون برنامه‌ها یا محتوای رسانه، سعی کنید فضا را خالی کنید."</string>
-    <string name="storage_menu_rename" msgid="8549835371429159336">"تغییر نام"</string>
+    <string name="storage_menu_rename" msgid="8549835371429159336">"تغییر نام دادن"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"قرار دادن"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"خارج کردن"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"قالب"</string>
@@ -1696,7 +1696,7 @@
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"فضای ذخیره‌سازی قابل‌حمل"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعداً تنظیم شود"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"این <xliff:g id="NAME">^1</xliff:g> قالب‌بندی شود؟"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"برای ذخیره برنامه‌ها، فایل‌ها و رسانه، لازم است این <xliff:g id="NAME_0">^1</xliff:g> قالب‌بندی شود. \n\nقالب‌بندی همه محتوای موجود در <xliff:g id="NAME_1">^2</xliff:g> را پاک می‌کند. برای جلوگیری از از دست رفتن محتوا، در <xliff:g id="NAME_2">^3</xliff:g> یا دستگاهی دیگر از آن پشتیبان‌گیری کنید."</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"برای ذخیره کردن برنامه‌ها، فایل‌ها و رسانه باید این <xliff:g id="NAME_0">^1</xliff:g> قالب‌بندی شود. \n\nقالب‌بندی همه محتوای موجود در <xliff:g id="NAME_1">^2</xliff:g> را پاک می‌کند. برای جلوگیری از ازدست رفتن محتوا، در <xliff:g id="NAME_2">^3</xliff:g> یا دستگاهی دیگر از آن پشتیبان‌گیری کنید."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"قالب <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"محتوا به <xliff:g id="NAME">^1</xliff:g> منتقل شود؟"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"می‌توانید فایل‌ها، رسانه و برنامه‌هایی خاص را به این <xliff:g id="NAME">^1</xliff:g> انتقال دهید. \n\nاین انتقال <xliff:g id="SIZE">^2</xliff:g> از فضای ذخیره‌سازی رایانه لوحی‌تان را آزاد می‌کند و باید تقریباً <xliff:g id="DURATION">^3</xliff:g> طول بکشد."</string>
@@ -3560,7 +3560,7 @@
     <string name="sim_call_back_title" msgid="4274099761123657464">"برگرداندن تماس از سیم‌کارت پیش‌فرض"</string>
     <string name="sim_outgoing_call_title" msgid="7759080345748128897">"سیم‌کارت برای تماس‌های خروجی"</string>
     <string name="sim_other_call_settings" msgid="5956308869284958883">"سایر تنظیمات تماس"</string>
-    <string name="preferred_network_offload_title" msgid="6453199586512609557">"عدم بارگیری شبکه ترجیحی"</string>
+    <string name="preferred_network_offload_title" msgid="6453199586512609557">"انتقال بار شبکه ترجیحی"</string>
     <string name="preferred_network_offload_header" msgid="4842188794016376899">"غیرفعال کردن پخش نام شبکه"</string>
     <string name="preferred_network_offload_footer" msgid="374984523082849648">"غیرفعال کردن پخش نام شبکه، مانع از دسترسی اشخاص ثالث به اطلاعات شبکه شما می‌شود."</string>
     <string name="preferred_network_offload_popup" msgid="3949937898807213370">"غیرفعال کردن پخش نام شبکه از اتصال خودکار به شبکه‌های مخفی جلوگیری می‌کند."</string>
