--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -440,7 +440,7 @@
       <item quantity="two">נוספו <xliff:g id="COUNT">%1$d</xliff:g> טביעות אצבע</item>
       <item quantity="many">נוספו <xliff:g id="COUNT">%1$d</xliff:g> טביעות אצבע</item>
       <item quantity="other">נוספו <xliff:g id="COUNT">%1$d</xliff:g> טביעות אצבע</item>
-      <item quantity="one">נוספה טביעת האצבע</item>
+      <item quantity="one">נוספה טביעת אצבע</item>
     </plurals>
     <string name="security_settings_fingerprint_preference_summary_none" msgid="1044059475710838504"></string>
     <string name="security_settings_fingerprint_enroll_introduction_title" msgid="7931650601996313070">"הגדרת טביעת האצבע"</string>
@@ -1657,7 +1657,7 @@
     <string name="storage_low_summary" msgid="7341022293583384506">"ייתכן שפונקציות מסוימות של המערכת, כמו סנכרון, לא יפעלו כראוי. אפשר לפנות מקום על ידי מחיקה או ביטול הצמדה של פריטים, כגון אפליקציות או תוכן מדיה."</string>
     <string name="storage_menu_rename" msgid="8549835371429159336">"שינוי שם"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"טעינה"</string>
-    <string name="storage_menu_unmount" msgid="8171552487742912282">"הוצא"</string>
+    <string name="storage_menu_unmount" msgid="8171552487742912282">"הוצאה"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"פירמוט"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"פירמוט כאחסון חיצוני"</string>
     <string name="storage_menu_format_private" msgid="3208326980027382079">"פרמוט כאחסון פנימי"</string>
