--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1614,7 +1614,7 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"Namakan semula"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Lekap"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Tanggalkan"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"Format"</string>
+    <string name="storage_menu_format" msgid="5454870642788909443">"Formatkan"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Formatkan sebagai mudah alih"</string>
     <string name="storage_menu_format_private" msgid="3208326980027382079">"Formatkan sebagai dalaman"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Pindahkan data"</string>
