--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1565,7 +1565,7 @@
     <string name="status_wifi_mac_address" msgid="4447611754614388914">"Kablosuz MAC adresi"</string>
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Cihaz kablosuz MAC adresi"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth adresi"</string>
-    <string name="status_serial_number" msgid="9060064164331466789">"Seri numara"</string>
+    <string name="status_serial_number" msgid="9060064164331466789">"Seri numarası"</string>
     <string name="status_up_time" msgid="1274778533719495438">"Açık kalma süresi"</string>
     <string name="status_awake_time" msgid="2573925324168081586">"Uyanık geçen süre"</string>
     <string name="internal_memory" msgid="1869518160077033848">"Dahili dep birm"</string>
