--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -1613,13 +1613,13 @@
     <string name="sd_ejecting_summary" msgid="861928572729341132">"Eemaldamine pooleli"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"Talletusruum saab täis"</string>
     <string name="storage_low_summary" msgid="7341022293583384506">"Mõned süsteemifunktsioonid, nt sünkroonimine, ei pruugi õigesti toimida. Proovige vabastada ruumi, kustutades üksusi, nt rakendusi või meediasisu, või eemaldades neid."</string>
-    <string name="storage_menu_rename" msgid="8549835371429159336">"Ümbernimetamine"</string>
+    <string name="storage_menu_rename" msgid="8549835371429159336">"Nimeta ümber"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Ühendamine"</string>
-    <string name="storage_menu_unmount" msgid="8171552487742912282">"Eemaldamine"</string>
+    <string name="storage_menu_unmount" msgid="8171552487742912282">"Eemalda"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"Vormindamine"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Vormindamine kaasaskantavana"</string>
     <string name="storage_menu_format_private" msgid="3208326980027382079">"Vormindamine sisemisena"</string>
-    <string name="storage_menu_migrate" msgid="2196088149560070193">"Andmete üleviimine"</string>
+    <string name="storage_menu_migrate" msgid="2196088149560070193">"Vii andmed üle"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Unustamine"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Seadistus"</string>
     <string name="storage_menu_free" msgid="616100170298501673">"Ruumi vabastamine"</string>
@@ -1698,7 +1698,7 @@
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Kaasaskantav salvestusruum"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Seadista hiljem"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Kas vormindada seade <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Seade <xliff:g id="NAME_0">^1</xliff:g> tuleb vormindada, et rakendusi, faile ja meediat salvestada. \n\nVormindamisel kustutatakse kogu seadmes <xliff:g id="NAME_1">^2</xliff:g> olev sisu. Sisu kaotsimineku vältimiseks varundage see teise salvestusseadmesse <xliff:g id="NAME_2">^3</xliff:g> või mõnda muusse seadmesse."</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"<xliff:g id="NAME_0">^1</xliff:g> tuleb vormindada, et rakendusi, faile ja meediat salvestada. \n\nVormindamisel kustutatakse kogu meediumil <xliff:g id="NAME_1">^2</xliff:g> olev sisu. Sisu kaotsimineku vältimiseks varundage see teise meediumisse (nt <xliff:g id="NAME_2">^3</xliff:g>) või mõnda muusse seadmesse."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Vorminda seade <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Kas teisaldada sisu seadmesse <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Failid, meedia ja teatud rakendused saab teisaldada seadmesse <xliff:g id="NAME">^1</xliff:g>. \n\nSellega vabastatakse <xliff:g id="SIZE">^2</xliff:g> teie tahvelarvuti salvestusruumist ja see võib võtta umbes <xliff:g id="DURATION">^3</xliff:g>."</string>
