--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -1655,7 +1655,7 @@
     <string name="sd_ejecting_summary" msgid="861928572729341132">"Izpenjanje poteka"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"Prostor za shranjevanje bo pošel"</string>
     <string name="storage_low_summary" msgid="7341022293583384506">"Nekatere sistemske funkcije, na primer sinhronizacija, morda ne delujejo pravilno. Poskusite sprostiti nekaj prostora tako, da zbrišete ali odpnete elemente, kot so aplikacije ali medijska vsebina."</string>
-    <string name="storage_menu_rename" msgid="8549835371429159336">"Preimenovanje"</string>
+    <string name="storage_menu_rename" msgid="8549835371429159336">"Preimenuj"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Vpenjanje"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Izvrzi"</string>
     <string name="storage_menu_format" msgid="5454870642788909443">"Formatiraj"</string>
@@ -1739,8 +1739,8 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Za prenašanje datotek in predstavnosti med napravami"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Prenosna shramba"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nastavi pozneje"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Želite formatirati ta nosilec: <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Če želite shranjevati aplikacije, datoteke in predstavnost, morate nosilec <xliff:g id="NAME_0">^1</xliff:g> formatirati. \n\nS formatiranjem boste izbrisali obstoječo vsebino v nosilcu <xliff:g id="NAME_1">^2</xliff:g>. Da bi se izognili izgubi vsebine, jo varnostno kopirajte v drug nosilec <xliff:g id="NAME_2">^3</xliff:g> ali napravo."</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Želite formatirati to shrambo <xliff:g id="NAME">^1</xliff:g>?"</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Če želite shranjevati aplikacije, datoteke in predstavnost, morate shrambo <xliff:g id="NAME_0">^1</xliff:g> formatirati. \n\nS formatiranjem boste izbrisali obstoječo vsebino v shrambi <xliff:g id="NAME_1">^2</xliff:g>. Da bi se izognili izgubi vsebine, jo varnostno kopirajte v drugo shrambo <xliff:g id="NAME_2">^3</xliff:g> ali napravo."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formatiraj <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Želite premakniti vsebino v nos. <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"V nosilec <xliff:g id="NAME">^1</xliff:g> lahko premaknete datoteke, predstavnost in določene aplikacije. \n\nS tem premikom boste v shrambi tabličnega računalnika sprostili do <xliff:g id="SIZE">^2</xliff:g>. Premikanje bo trajalo približno <xliff:g id="DURATION">^3</xliff:g>."</string>
