Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Iaeca6e9d0e33b825b8d12c9290e24d55eb42f268

Former-commit-id: a23afa25c51e5452f561af4bc05732837fdc0813

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1315,7 +1315,8 @@
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"En savoir plus sur la rotation automatique"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Quand vous basculez votre téléphone en mode portrait ou paysage"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Résolution d\'écran"</string>
-    <string name="screen_resolution_option_high" msgid="2617496842852992853">"Haute résolution"</string>
+    <!-- no translation found for screen_resolution_option_high (2617496842852992853) -->
+    <skip />
     <string name="screen_resolution_option_highest" msgid="7892101083236381555">"Résolution maximale"</string>
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"FHD+ 1080p"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"QHD+ 1440p"</string>
