--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -3178,7 +3178,7 @@
     <string name="misc_files_selected_count_bytes" msgid="7622766714974500289">"<xliff:g id="NUMBER">%1$s</xliff:g>, барлығы <xliff:g id="TOTAL">%2$s</xliff:g>"</string>
     <string name="select_all" msgid="7898929601615536401">"Барлығын таңдау"</string>
     <string name="data_usage_summary_title" msgid="394067070764360142">"Дерек шығыны"</string>
-    <string name="data_usage_app_summary_title" msgid="4933742247928064178">"Мобильдік дерек пен Wi‑Fi"</string>
+    <string name="data_usage_app_summary_title" msgid="4933742247928064178">"Мобильдік интернет пен Wi‑Fi"</string>
     <string name="data_usage_accounting" msgid="6832015632699116754">"Оператордың деректер есебі құрылғыңыздан басқаша болуы мүмкін."</string>
     <string name="data_usage_app" msgid="6367974637783240699">"Қолданбаны пайдалану"</string>
     <string name="data_usage_app_info_label" msgid="3542220416056122841">"ҚОЛДАНБА ТУРАЛЫ АҚПАРАТ"</string>
