--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11907,4 +11907,26 @@
     <!-- [CHAR LIMIT=NONE] Title for Accessibility Software Cursor setting for keyboard shift. -->
     <string name="software_cursor_trigger_keyboard_shift_enabled_title" translatable="false">Shift gesture detection region above keyboard</string>
 
+    <!-- Mobile Bundled Apps Transparency Metadata-->
+
+    <!-- [CHAR_LIMIT=NONE] Label for mobile bundled apps screen -->
+    <string name="mobile_bundled_apps">Mobile bundled apps</string>
+    <!-- [CHAR_LIMIT=NONE] Title for mobile bundled apps screen -->
+    <string name="mobile_bundled_apps_title">Mobile bundled apps</string>
+    <!-- [CHAR_LIMIT=NONE] Title for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_title">Mobile bundled apps transparency info</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_contains_ad_title">Contains ads</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_developer_info_title">Developer(s) Information</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_contact_title">Contact Information</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_description_title">Description</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_privacy_policy_title">Privacy Policy</string>
+    <!-- [CHAR_LIMIT=NONE] Subheading for mobile bundled apps transparency information details screen -->
+    <string name="mobile_bundled_apps_details_category_title">Category</string>
+    <!-- [CHAR_LIMIT=NONE] Summary for App Details in App Info page if app is mobile bundled app -->
+    <string name="app_install_details_mba_summary">Mobile Bundled App</string>
 </resources>
